@@ -1,3 +1,4 @@
+SUBDIRS = m4
 EXTRA_DIST = Common.Makefile mcs-test-79698.cs gmcs.exe
 MAINTAINERCLEANFILES = Makefile.in
 
