@@ -1,0 +1,3 @@
+EXTRA_DIST = $(srcdir)/banshee/*.m4 $(srcdir)/shamrock/*.m4
+MAINTAINERCLEANFILES = Makefile.in
+
