@@ -35,7 +35,7 @@ $(BOO_MACRO_ASSEMBLY): $(BOO_MACRO_SRC)
 	$(BOOC) -t:library -o:$@ -debug- -nologo $(BOO_MACRO_SRC)
 endif
 
-EXTRA_DIST = $(ASSEMBLY_SOURCES)
+EXTRA_DIST = $(ASSEMBLY_SOURCES) $(BOO_MACRO_SRC)
 
 CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb $(BOO_MACRO_ASSEMBLY)
 MAINTAINERCLEANFILES = Makefile.in
